syntax = "proto3";

package sc_service;

option go_package = "../backend/generated;auth";
service SchoolService {
  rpc GetSchoolInfo(SchoolRequest) returns (SchoolResponse);
}

message SchoolRequest {
  string school_id = 1;
}

message SchoolResponse {
  string school_name = 1;
  string address = 2;
}
